--- a/css/eiw.css
+++ b/css/eiw.css
@@ -30,6 +30,7 @@ button:focus {
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 html {
@@ -317,8 +318,9 @@ min-width: 1200px;
     padding-bottom: 25px;
 }
 
-.appr-items {display: flex;justify-content: center;gap: 15px;padding-top: 15px;}
-.appr-item {width: 100px;height: 100px;overflow: hidden;display: flex;background: whitesmoke;border-radius: 15px;border: solid 1px #727272a3;}
+.appr-items {display: flex;padding-top: 15px;gap: 23px;overflow: hidden;}
+.appr-item {width: 150px!important;height: 150px!important;overflow: hidden;display: flex;background: whitesmoke;border-radius: 15px;/* border: solid 1px #72727200; */flex-shrink: 0;box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;}
+.appr-item img{width: 150px;height: 150px;}
 .wave-v1
 {
     background: black;
@@ -327,14 +329,7 @@ min-width: 1200px;
     width: 100%;
 }
 .cli-con
-{
-
-background: #193893;
-
-padding-top: 25px;
-
-padding-bottom: 60px;
-}
+{background: #193893;padding-top: 25px;/* padding-bottom: 60px; */}
 .cli-view
 {
     
@@ -343,17 +338,8 @@ width: 1200px;
 margin: auto;
 }
 .client-items
-{
-
-display: flex;
-
-gap: 15px;
-
-justify-content: center;
-
-padding-top: 15px;
-}
-.client-item {width: 150px;height: 150px;overflow: hidden;display: flex;background: white;border-radius: 25px;}
+{display: flex;gap: 23px;padding-top: 15px;overflow: hidden;}
+.client-item {width: 150px!important;height: 150px!important;overflow: hidden;display: flex;background: white;border-radius: 25px;flex-shrink: 0;box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;}
 .client-item img{width: 100%;}
 .faq-con
 {padding-bottom: 40px;position: relative;background-color: #EEEEEE;}
@@ -494,14 +480,13 @@ padding-bottom: 25px;
 }
 .foot-left-view
 {
-    
-display: flex;
-    
-gap: 59px;
+    display: flex;
+    gap: 121px;
+    flex-shrink: 0;
 }
 .foot-head-text {font-size: 18px;color: white;font-weight: 600;padding-bottom: 15px;}
 .foot-head-text-sm {font-size: 14px;font-weight: 700;color: white;padding-bottom: 5px;}
-.foot-head-text-sm1 {font-size: 14px;color: white;}
+.foot-head-text-sm1 {font-size: 14px;color: white;padding-bottom: 5px;}
 
 .foot-logo {width: 184px;margin-right: 201px;}
 .foot-logoimg {
@@ -768,4 +753,51 @@ h1{
     font-size: 32px;
     text-align: center;
     padding-top: 30px;
+}
+.appr-loc-con
+{background-color: #193893;background-position-x: 298px;min-width: 1200px;/* height: 199px; */padding-bottom: 60px;}
+.appr-loc-view
+{
+    width: 1200px;
+    margin: auto;
+    padding-top: 58px;
+    padding-bottom: 25px;
+}
+
+.appr-loc-items {display: flex;padding-top: 15px!important;gap: 23px;overflow: hidden;}
+.appr-loc-item {width: 150px!important;height: 150px !important;overflow: hidden;display: flex;background: whitesmoke;border-radius: 15px;/* border: solid 1px #72727200; */flex-shrink: 0;box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;}
+.appr-loc-item img{width: 150px;height: 150px;}
+.appr-loc-pagination
+{
+    position: relative;
+    width: 100%;
+    height: 32px;
+    margin-top: 10px;
+    text-align: center;
+}
+.cli-pagination
+{
+    position: relative;
+    width: 100%;
+    height: 32px;
+    margin-top: 10px;
+    text-align: center;
+}
+.appr-pagination
+{
+    position: relative;
+    width: 100%;
+    height: 32px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.footer-contacts {padding-top: 25px!important;display: flex;overflow: hidden;}
+.contact-item {width: 100%;flex-shrink: 0;}
+.contact-head {font-size: 18px;font-weight: 700;color: white;padding-bottom: 5px;}
+.contact-text {color: white;font-size: 16px;}
+.foot-right-view
+{
+    flex-shrink: 0;
+    width: 300px;
 }
