--- a/css/eiw.css
+++ b/css/eiw.css
@@ -207,15 +207,15 @@ html {
 
 .call-con
 {
-    background-color: black;
+    background-color: #1c1c1c;
     min-width: 1200px;
 }
 .call-view
 {
     width: 1200px;
     margin: auto;
-    padding-top: 90px;
-    padding-bottom: 92px;
+    padding-top: 41px;
+    padding-bottom: 67px;
 }
 .xl-h1
 {
@@ -228,19 +228,10 @@ font-size: 34px;
 
 font-weight: 600;
 }
+.xl-h2
+{text-align: center;color: #1a1a1a;font-size: 34px;font-weight: 600;PADDING: 22px;border-radius: -12px;margin-bottom: 28px;}
 .sm-h1
-{
-
-text-align: center;
-
-color: #d7d7d7;
-
-font-size: 17px;
-
-font-weight: 300;
-
-padding-top: 62px;
-}
+{text-align: center;color: #d7d7d7;font-size: 17px;font-weight: 300;padding-top: 21px;}
 .myinput
 {
     background-color: #2F2F2F;
@@ -300,21 +291,13 @@ width: 500px;
 margin: auto;
 }
 .appr-con
-{
-
-background-color: #193893;
-
-background-position-x: 298px;
-
-min-width: 1200px;
-
-/* height: 199px; */
-}
+{background-color: #000000;background-position-x: 298px;min-width: 1200px;/* height: 199px; */}
 .appr-view
 {
     width: 1200px;
     margin: auto;
-    padding-top: 58px;
+    padding-top: 26px;
+    padding-bottom: 26px;
     /* padding-bottom: 3px; */
 }
 
@@ -329,7 +312,7 @@ min-width: 1200px;
     width: 100%;
 }
 .cli-con
-{background: #193893;/* padding-top: 25px; *//* padding-bottom: 60px; */}
+{background: #000000;padding-top: 25px;/* padding-bottom: 60px; */}
 .cli-view
 {
     
@@ -342,7 +325,7 @@ margin: auto;
 .client-item {width: 100px!important;height: 100px!important;overflow: hidden;display: flex;background: white;border-radius: 25px;flex-shrink: 0;box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;}
 .client-item img{width: 100px;height: 100px;}
 .faq-con
-{padding-bottom: 40px;position: relative;background-color: #EEEEEE;}
+{padding-bottom: 40px;position: relative;background-color: #EEEEEE;border-bottom: solid 1px #dfdfdf;}
 .faq-view
 {
 
@@ -355,7 +338,7 @@ display: flex;
 padding-top: 50px;
 }
 .faq-col1
-{width: 45%;min-height: 400px;/* display: flex; */justify-content: flex-end;align-items: center;border-right: solid 5px #193893;padding-left: 80px;padding-right: 40px;}
+{width: 45%;min-height: 400px;/* display: flex; */justify-content: flex-end;align-items: center;border-right: solid 5px #193893;padding-top: -13px;padding-right: 40px;}
 .faq-heead
 {font-size: 33px;font-weight: 500;color: #193893;padding-right: 39px;}
 .faq-col2
@@ -497,10 +480,8 @@ padding-top: 29px;
     width: 50%;
     padding-left: 76px;
     display: flex;
-    padding-top: 31px;
-    justify-content: flex-start;
-    align-items: flex-start;
-    overflow: hidden;
+    padding-top: 150px;
+    /* overflow: hidden; */
 }
 .desc-h1
 {
@@ -515,7 +496,7 @@ h1{
 {font-size: 38px;font-weight: 600;margin-bottom: 12px;}
 .desc-text {text-indent: 25px;font-size: 14px;text-align: justify;line-height: 2;font-weight: 200;overflow: hidden;height: 466px;transition: width 2s, height 4s;}
 .desc-image
-{/* width: 512px!important; */height: 578px !important;position: relative;border: solid 10px #efefef;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
+{width: 259px!important;height: 350px !important;position: relative;border: solid 3px #efefef;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
 .desc-image img{
     width: 100%;
     height: 100%;
@@ -666,7 +647,7 @@ h1{
         align-items: center;
         position: relative;
 }
-.service-item {width: auto;display: flex;gap: 10px;cursor: pointer;align-items: center;height: 52px;flex-shrink: 0;}
+.service-item {width: auto;display: flex;gap: 10px;cursor: pointer;align-items: center;height: 52px;flex-shrink: 0;position: relative;}
 .service-text {color: white;font-size: 12px;}
 .service-icon
 {
@@ -683,7 +664,7 @@ h1{
     position: absolute;
     top: 51px;
     left: 0;
-    width: 1200px;
+    width: auto;
     background: white;
     padding: 15px;
     border-bottom-right-radius: 15px;
@@ -694,6 +675,23 @@ h1{
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     display: none;
     overflow: hidden;
+    white-space: nowrap;
+   
+}
+
+.service-more ul{list-style: none;margin: 0;padding: 0;}
+.service-more ul li{
+    padding-bottom: 5px;
+    padding-top: 5px;
+    border-bottom: solid 1px #193892b3;
+    color: #2e2e2e;
+    font-size: 16px;
+    font-weight: 700;
+    background: #f5f5f56e;
+    margin-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 11px;
 }
 .service-more-head
 {
@@ -720,7 +718,7 @@ h1{
     }
 }
 
-.proof-con {/* background-color: black; */min-width: 1200px;padding-top: 53px;padding-bottom: 72px;}
+.proof-con {min-width: 1200px;padding-top: 53px;padding-bottom: 72px;background: #323232;}
 .proof-view {width: 600px;margin: auto;padding-top: 49px;padding-bottom: 24px;background: #091a42;border-radius: 15px;border: solid 1px #6275974a;position: relative;overflow: hidden;box-shadow: rgb(0 0 0 / 22%) 0px 50px 100px -20px, rgb(0 0 0) 0px 30px 60px -30px;}
 .proof-h1 {font-size: 19px;color: white;text-align: center;font-weight: 500;}
 .proof-h2 {text-align: center;color: #d7d7d7;padding-top: 10px;}
@@ -734,13 +732,13 @@ h1{
     font-weight: 500;
 }
 .appr-loc-con
-{background-color: #193893;background-position-x: 298px;min-width: 1200px;/* height: 199px; */padding-bottom: 60px;}
+{background-color: #193893;background-position-x: 298px;min-width: 1200px;/* height: 199px; */padding-bottom: 24px;}
 .appr-loc-view
 {
     width: 1200px;
     margin: auto;
-    /* padding-top: 58px; */
-    /* padding-bottom: 25px; */
+    padding-top: 37px;
+    padding-bottom: 25px;
 }
 
 .appr-loc-items {display: flex;padding-top: 15px!important;gap: 23px;overflow: hidden;}
@@ -807,24 +805,28 @@ h1{
 .letconnect-more
 {
     position: fixed;
-    bottom: 38px;
-    right: 52px;
+    bottom: 278px;
+    right: 36px;
 }
 .let-whats
 {
     background: #1dc51d;
-    border-radius: 50%;
+    border-radius: 19px;
     padding: 15px;
     color: white;
-    width: 64px;
-    height: 64px;
-    font-size: 24px;
+    width: 182px;
+    height: 50px;
+    font-size: 17px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 13px;
     border: solid 3px white;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.let-whats .icon{
+    display: flex;
+    padding-right: 4px;
 }
 .let-whats:hover,.let-mail:hover
 {
@@ -860,3 +862,225 @@ h1{
 {
     font-size: 20px!important;
 }
+
+.pic-head {font-size: 33px;font-weight: 500;color: #193893;padding-right: 39px;text-align: right;}
+.detail-pic {padding-top: 25px;}
+.detail-pic img{
+    width: 100%;
+}
+
+
+.services-con {min-width: 1200px;padding-top: 50px;}
+.services-view {width: 1200px;margin: auto;}
+.services-row1 {display: flex;gap: 50px;justify-content: center;padding-bottom: 40px;}
+.services-item {width: 250px;/* height: 250px; *//* margin-bottom: 10px; *//* overflow: hidden; */position: relative;transition: all ease 1s;}
+.services-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all ease 1s;
+    cursor: pointer;
+}
+.services-item:hover img
+{
+
+    transform: scale(1.2);
+}
+.services-text
+{
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    width: 100%;
+    background: #000000b0;
+    height: 60px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.services-image-container {width: 250px;height: 190px;background: red;border-radius: 15px;overflow: hidden;position: relative;}
+.services-options
+{
+    position: absolute;
+    background: #131414;
+    color: white;
+    z-index: 9;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    font-size: 14px;
+    padding-top: 15px;
+    display: none;
+    overflow: hidden;
+    width: 100%;
+}
+.services-options ul{
+    padding-right: 15px;
+}
+.services-item:hover .services-image-container
+{
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}.services-item:hover .services-options
+{
+   display: block;   
+   animation: slideservice 1s forwards;
+ 
+}.services-item:hover .services-text
+{
+   background-color: #131414;
+}
+@keyframes slideservice {
+    0% {
+        -webkit-transform: rotateY(-30deg) translateY(-100px) skewY(30deg);
+                transform: rotateY(-30deg) translateY(-100px) skewY(30deg);
+        opacity: 0;
+      }
+      100% {
+        -webkit-transform: rotateY(0deg) translateY(0) skewY(0deg);
+                transform: rotateY(0deg) translateY(0) skewY(0deg);
+        opacity: 1;
+      }
+}
+
+.proj-con {min-width: 1200px;}
+.proj-view {width: 1200px;margin: auto;}
+.proj-head {text-align: left;padding-bottom: 21px;padding-top: 39px;font-size: 28px;font-weight: 600;}
+.proj-items {display: flex;gap: 15px;padding-bottom: 15px;}
+.proj-item {cursor: pointer; border: solid 1px #e9e6e6f0;width: 159px;font-size: 12px;font-weight: 600;display: flex;justify-content: center;align-items: center;text-align: center;padding: 10px;border-radius: 15px;}
+.proj-item.active
+{
+    background: black;
+    color: white;
+}
+.projects {padding-bottom: 50px;}
+.project {display: none; width: 1200px;height: 319px;box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;padding: 25px;}
+.project-item-content{
+    display: flex;
+}
+.project-image
+{height: 100%;overflow: hidden;width: 500px;flex-shrink: 0;}
+.project-image img
+{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all ease 1s;
+}
+.project-image:hover img
+{
+    transform: scale(1.5);
+
+}
+
+.project-info {width: 100%;padding-left: 25px;}
+.project-info-head {font-size: 18px;font-weight: 600;padding-bottom: 10px;color: #193893;}
+.project-info-text {font-size: 16px;line-height: 2;color: gray;}
+.mail-window
+{
+    width: 250px;
+    height: 279px;
+    position: fixed;
+    background: white;
+    right: 3px;
+    bottom: 0px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    padding: 15px;
+}
+
+.mail-head {text-align: center;font-size: 14px;font-weight: 600;padding-bottom: 15px;}
+.mail-row {margin-bottom: 5px;}
+.mail-input {width: 100%;border-radius: 5px;border: solid 1px #c9c7c7;font-size: 14px;padding: 5px;}
+.mail-bttn {border: none;background: #091a42;width: 100%;color: white;padding: 5px;border-radius: 5px;}
+
+
+
+
+
+
+
+
+
+  
+  .container {
+    margin: 0 auto;
+    width: 250px;
+    height: 200px;
+    position: relative;
+    perspective: 1000px;
+  }
+  
+  .carousel {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+  }
+  
+  .item {
+    display: block;
+    position: absolute;
+    background: #000;
+    width: 250px;
+    height: 200px;
+    line-height: 200px;
+    font-size: 5em;
+    text-align: center;
+    color: #FFF;
+    opacity: 0.95;
+    border-radius: 10px;
+  }
+  
+  .a {
+    transform: rotateY(0deg) translateZ(250px);
+    background: #ed1c24;
+  }
+  .b {
+    transform: rotateY(60deg) translateZ(250px);
+    background: #0072bc;
+  }
+  .c {
+    transform: rotateY(120deg) translateZ(250px);
+    background: #39b54a;
+  }
+  .d {
+    transform: rotateY(180deg) translateZ(250px);
+    background: #f26522;
+  }
+  .e {
+    transform: rotateY(240deg) translateZ(250px);
+    background: #630460;
+  } 
+  .f {
+    transform: rotateY(300deg) translateZ(250px);
+    background: #8c6239;
+  }
+  
+  .next, .prev {
+    color: #444;
+    position: absolute;
+    top: 100px;
+    padding: 1em 2em;
+    cursor: pointer;
+    background: #CCC;
+    border-radius: 5px;
+    border-top: 1px solid #FFF;
+    box-shadow: 0 5px 0 #999;
+    transition: box-shadow 0.1s, top 0.1s;
+    display: none;
+  }
+  .next:hover, .prev:hover { color: #000; }
+  .next:active, .prev:active {
+    top: 104px;
+    box-shadow: 0 1px 0 #999;
+  }
+  .next { right: 5em; }
+  .prev { left: 5em; }
