--- a/js/toast.css
+++ b/js/toast.css
@@ -14,6 +14,7 @@
     var(--my-font);
     box-shadow:
     rgb(0 0 0 / 0%) 0px 2px 4px -1px, rgb(0 0 0 / 0%) 0px 4px 5px 0px, rgb(0 0 0 / 11%) 0px 1px 10px 0px;
+    z-index: 99999999;
 }
 .toast.successtoast
 {
